--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+`<!DOCTYPE html>
 <html lang='en'>
     <head>
         <meta charset="utf-8">
@@ -9,6 +9,28 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p>Hello World</p>
+        <h1>Currency Exchanger</h1>
+        <form action="">
+            <label for="base currencies">Base Currency:</label>
+            <select name="base currincies" id="base currencies">
+                <option value="USD">USD (US Dollars)</option>
+                <option value="INR">INR (Indian Rupees)</option>
+                <option value="EUR">EUR (Euro)</option>
+                <option value="GBP">GBP (Pound Sterling)</option>
+            </select>
+            <br><br>
+            <label for="amount">Amount</label>
+            <input type="number" value="0.00">
+            <br><br>
+            <label for="quoted currency">Quoted Currency</label>
+            <select name="quoted currency" id="quoted currency">
+                <option value="USD">USD (US Dollars)</option>
+                <option value="INR">INR (Indian Rupees)</option>
+                <option value="EUR">EUR (Euro)</option>
+                <option value="GBP">GBP (Pound Sterling)</option>
+            </select>
+            <br><br>
+            <input type="submit" value="Submit">
+        </form>
     </body>
 </html>
